# mwss-test

./: CMakeLists.txt  README.md
cmake/: FindExactcolors.cmake
data/: graph.txt
src/: main.cpp
